# sonoverse

./: LICENSE  README.md
sonoverse-backend/: .gitignore  pyproject.toml
sonoverse-backend/sonoverse/: app.py  main.py
sonoverse-ui/: package-lock.json  package.json
sonoverse-ui/src/: App.tsx
